fixed a 20px margin clipping the photos on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -570,6 +570,10 @@ h1.services {
     .s-row {
         display: block;
     }
+
+    .photo {
+        margin: inherit;
+    }
     
     .photo-align-weight-right {
         float: none;
